# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  camera.py  intersection.py  main.py  material.py  objects.py  ray.py  raytracer  scene.py  setup.py  utils.py
cfg/: butt.cfg  snowman.cfg  test.cfg
include/raytracer/: Camera.h  DOFData.h  Intersection.h  Light.h  Material.h  PointLight.h  RandomData.h  Ray.h  RenderOptions.h  Scene.h  parser.h  raytracer.h  utils.h
include/raytracer/lights/: Light.h  PointLight.h
include/raytracer/objects/: Disc.h  Object.h  Plane.h  Sphere.h
python/: main.py  setup.py
python/raytracer/: Camera.py  Material.py  Scene.py  __init__.py  utils.py
python/raytracer/objects/: Plane.py  __init__.py
raytracer/: Camera.py  Intersection.py  Light.py  Objects.py  Scene.py  __init__.py  utils.py
raytracer/objects/: Disc.py  Object.py  Sphere.py  __init__.py
src/: Camera.cpp  Light.cpp  PointLight.cpp  Scene.cpp  main.cpp  parser.cpp  raytracer.cpp  utils.cpp
src/lights/: Light.cpp  PointLight.cpp
src/objects/: Disc.cpp  Object.cpp  Plane.cpp  Sphere.cpp
